<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ConnisRezepteAppActivity!</string>
    <string name="app_name">Connis Rezepte</string>
    <string name="inprogress">Arbeite, bitte warten Sie kurz ...</string>
    <string name="updated_documents">Neue Dokumente</string>
    <string name="debug_cleandb">Clean DB</string>
    <string name="debug_copydb">Export DB</string>
    <string name="debug_importdb">Import DB</string>
    <string name="debug_db_view">Database Debugging</string>
    <string name="exit">Schließen</string>
    <string name="action_menu_search">Rezepte durchsuchen</string>
    <string name="search_hint">Nach Rezepten suchen</string>
    <string name="save">Rezept speichern</string>
    <string name="error_save_to_db">Beim Speichern der Änderungen ist ein Fehler aufgetreten, es wurden keine Daten gespeichert</string>
    <string name="save_successfull">Das Rezept wurde gespeichert</string>
    <string name="import_database">Sind Sie sich sicher diese Datenbank zu importieren, es koennten alte Daten verlohren gehen!</string>
    <string name="keine_rezepte_gefunden">Keine Rezepte gefunden</string>
    
    <string name="zubereitungsart">Zubereitungsart</string>
    <string name="kategorie">Kategorie</string>
    <string name="zutaten">Zutaten</string>
    <string name="zeit">Zeit</string>

    <string name="tab_all_documents">Alle Rezepte</string>
    <string name="tab_search">Neue Suche</string>
    <string name="tab_last_search">Letze Suche</string>
    <string name="keine_zutaten_erfasst">Keine Zutaten erfasst</string>

    
</resources>