<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <item android:id="@+id/menu_debug_cleandb"
          android:showAsAction="never" 
          android:title="@string/debug_cleandb"/>
     
     <item android:id="@+id/menu_debug_copydb"
          android:showAsAction="never" 
          android:title="@string/debug_copydb"/>
     
     <item android:id="@+id/menu_debug_importdb"
          android:showAsAction="never" 
          android:title="@string/debug_importdb"/>
 
     
 <item android:id="@+id/menu_search_action" 
     	android:title="@string/action_menu_search" 
     	android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView"
     	android:icon="@drawable/magnify"/>
 
</menu>